[workspace]
members = ["contracts/token", "contracts/hub", "contracts/hub-tf", "packages/*"]
resolver = '1'

[profile.release.package.pfc-steak]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
