[package]
name = "steak-hub"
version = "2.0.2"
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/st4k3h0us3/steak-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0", features = ["staking"] }
cw20 = "0.13"
cw20-base = { version = "0.13", features = ["library"] }
cw-storage-plus = "0.13"
steak = { path = "../../packages/steak" }

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
