[package]
name = "steak-hub"
version = "0.1.0"
authors = ["larry <gm@larry.engineer>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/larry0x/steak"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16", features = ["staking"] }
cw20 = "0.9"
cw20-base = { version = "0.9", features = ["library"] }
cw-storage-plus = "0.9"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
terra-cosmwasm = "2.2"