[package]
name = "steak-zapper"
version = "0.1.0"
authors = ["larry <gm@larry.engineer>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/st4k3h0us3/steak-contracts"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
astroport = "1.0"
cosmwasm-std = { version = "0.16", features = ["staking"] }
cw20 = "0.9"
cw-storage-plus = "0.9"
steak = { path = "../../packages/steak" }
