[package]
name = "steak-token"
version = "2.0.0"
authors = ["larry <gm@larry.engineer>", "PFC <pfc-validator@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/st4k3h0us3/steak-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.0" }
cw20 = "0.13"
cw20-base = { version = "0.13", features = ["library"] }
